# bqas-model

./: .gitignore  _analyze_000915.py  _check_schema.py  _check_tables.py  _check_years.py  _compare_ttm.py  analyze_outsiders.py  api_server.py  backfill_quotes.py  backtest_extended.py  backtest_multi_year.py  backtest_price.py  backtest_score.py  batch_enrich_industries.py  batch_rank.py  batch_rank2.py  batch_rank3.py  bqas_mcp_server.py  check_data_quality.py  check_db.py  check_db2.py  check_outsiders.py  dashboard.html  dashboard_data.json  fetch_indices.py  pyproject.toml  requirements.txt  run_top30.py  schema_check.py  streamlit_app.py
bqas/: __init__.py  cli.py
bqas/data/: __init__.py  fetcher.py  fetcher_global.py  restatement_monitor.py  schema.py
bqas/data/cache/: factor_cache.json
bqas/engine/: __init__.py  beneish.py  blacklist.py  cache_layer.py  factors.py  industry.py  scorer.py  scorer_global.py
docs/plans/: fix-1-cloud-data-consistency.md  fix-2-wsl-curl-fetcher.md  fix-3-error-handling.md
scripts/: add_hstech_stocks.py  enrich_industries.py  enrich_industries_sina.py  fetch_hk_eastmoney.py
tests/: test_engine.py
