[project]
name = "bqas"
version = "0.1.0"
description = "Buffett Quantitative Assessment System — 巴菲特量化评估系统 MVP"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "tqdm>=4.65",
]

[project.scripts]
bqas = "bqas.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
