[project]
name = "bqas"
version = "1.0.0"
description = "Buffett Quantitative Analysis System — A-share value scoring"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0",
    "rich>=13.0",
    "akshare>=1.12.0",
]

[project.scripts]
bqas = "bqas.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bqas*"]
